infrastructure/app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: users-api
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: users-api-ingress
  namespace: users-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
    certmanager.k8s.io/acme-challenge-type: http01

spec:
  rules:
  - host: users.endpoints.analyticsframework.cloud.goog
    http:
      paths:
      - path: /
        backend:
          serviceName: users-api
          servicePort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: users-api
  namespace: users-api
spec:
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: users-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: users-api
  namespace: users-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: users-api
        environment: dev
    spec:
      volumes:
      - name: nginx-ssl
        secret:
          secretName: users-api-tls
      - name: esp-config
        configMap:
          name: esp-config

      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: cloud.google.com/gke-preemptible
                operator: Exists
            weight: 100

        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: "kubernetes.io/hostname"
            labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - users-api
              - key: environment
                operator: In
                values:
                - dev

      containers:
      - name: esp
        # TODO: Resource requests
        image: gcr.io/endpoints-release/endpoints-runtime:1
        command: ["/bin/bash"]
        args: [
          "/home/startup.sh"
        ]
        # readinessProbe:
        #   tcpSocket:
        #     port: 8080
        #   initialDelaySeconds: 5
        #   periodSeconds: 10
        #   timeoutSeconds: 1
        #   successThreshold: 1
        #   failureThreshold: 10
        ports:
          - containerPort: 443
        volumeMounts:
        - mountPath: /etc/nginx/ssl_ro
          name: nginx-ssl
          readOnly: true
        - mountPath: /home
          name: esp-config
          readOnly: true

      - name: grpc-server
        # TODO: Resource requests
        imagePullPolicy: Always
        image: gcr.io/analyticsframework/datasets/apis/users/grpc-server:0.2.0-alpha
        args: [
          "--port=8081",
        ]
        ports:
          - containerPort: 8081
